# txtit

./: CMakeLists.txt
include/: editor.h  platform.h  txtit.h  types.h
src/: editor.cpp  platform_posix.cpp  platform_win32.cpp  txtit.cpp
